Scrollbar UI fix

--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -623,7 +623,7 @@ pre tt:after {
 }
 
 .layout-base {
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 button.skip-nav {
